--- a/public/index.html
+++ b/public/index.html
@@ -18,21 +18,20 @@
   width: 1100px;
   height: 480px; }
 .svg-wrapper {
-  background-color: rgb(200,200,200);
   margin: 0 auto;
   position: relative;
   width: 720px;
   height: 480px; }
 h1 { font-weight: 400; }
 h1.title {
-  color: rgb(0,0,0);
+  color: rgb(100,100,100);
   display: block;
-  font-family: "Raleway";
-  font-size: 30px;
+  font-family: "League Gothic";
+  font-size: 50px;
   position: absolute;
   top: 10px;
-  left: 0;
-  text-align: left;
+  right: 0;
+  text-align: right;
   text-transform: uppercase;
   z-index: 2; }
 </style>
@@ -48,49 +47,115 @@ var Viz = function() {
 
   _this.biggest = 24;
   _this.height = 480;
-  _this.realHeight = _this.height - 50;
+  _this.realHeight = _this.height - 120;
   _this.width = 720;
 
   this.prep = function() {
     _this.paper = new Raphael( $('.svg-wrapper')[0], _this.width, _this.height );
     _this.monthOffset = _this.width / (window.months.length - 1);
-  }
-
-  /*
-  this.draw = function() {
-    var w = _this.monthOffset;
-    var h = ( _this.realHeight / _this.biggest ) - 2;
-    var x, y;
-    for( var i = 0; i < window.months.length; i++ ) {
-      var month = window.months[i];
-      for( var j = 0; j < window.d[month].length; j++ ) {
-        var item = window.d[month][j];
-        x = (_this.monthOffset * i);
-        y = Math.abs( _this.realHeight - ( (h * j) + 2 ) );
-        _this.renderRect( x, y, Math.floor( w ), Math.floor( h ), item );
+    var drawMonths = function() {
+      for( var i = 0; i < window.months.length; i++ ) {
+        if( i % 6 == 0 ) {
+          var month = window.months[i];
+          _this.paper
+            .text( (i * _this.monthOffset) + (_this.monthOffset / 2) , 450, month )
+            .attr({
+              'fill': 'rgb(0,0,0)',
+              'font-family': 'Helvetica',
+              'font-size': _this.monthOffset,
+              'font-weight': 'bold'
+            }).rotate( 90 )
+        }
       }
     }
+    drawMonths();
   }
-  */
 
-  this.drawItem = function( i, j ) {
+  this.drawSNAPRect = function( i ) {
+    var SNAPMax = 46609075;
+    var maxHeight = _this.realHeight;
+    var amount = window.e[months[i]];
+    var ty = (amount * maxHeight) / SNAPMax;
+    var x = (_this.monthOffset * i) + 1;
+    var y = Math.abs( _this.realHeight - ty ) + 64;
+    var h = ty;
+    _this.renderSNAPRect( x, y, _this.rw, h );
+    i++;
+    if( i < window.months.length ) {
+      var t = setTimeout( function() { _this.drawSNAPRect( i ); }, 50 );
+    } else {
+      _this.drawRect( 0, 0 );
+    }
+  }
+
+  this.renderSNAPRect = function( x, y, w, h ) {
+    var rect = _this.paper
+      .rect( x, _this.realHeight, w, 0, 1 )
+      .attr({
+        'fill': 'rgb(255,0,0)',
+        'stroke': 'none'
+      })
+      .animate({
+        y: y,
+        height: h
+      }, 50, "<>" )
+  }
+
+  this.drawUnemploymentRect = function( i ) {
+    var UnemploymentMax = 10;
+    var maxHeight = _this.realHeight;
+    var amount = window.f[months[i]];
+    var ty = ( amount * maxHeight ) / UnemploymentMax;
+    var x = ( _this.monthOffset * i ) + 1;
+    var y = Math.abs( _this.realHeight - ty ) + 64;
+    var h = ty;
+    _this.renderUnemploymentRect( x, y, _this.rw, h );
+    i++;
+    if( i < window.months.length ) {
+      var t = setTimeout( function() { _this.drawUnemploymentRect( i ); }, 50 );
+    } else {
+      _this.drawRect( 0, 0 );
+    }
+  }
+
+  this.renderUnemploymentRect = function( x, y, w, h ) {
+    var rect = _this.paper
+      .rect( x, _this.realHeight, w, 0, 1 )
+      .attr({
+        'fill': 'rgb(255,0,0)',
+        'stroke': 'none'
+      })
+      .animate({
+        y: y,
+        height: h
+      }, 50, "<>" );
+    _this.bindRect( rect, "rgb(255,0,0)" );
+  }
+
+
+
+  this.drawRect = function( i, j ) {
     if( window.d[months[i]].length > 0 ) {
-      var w = _this.monthOffset;
-      var h = ( _this.realHeight / _this.biggest ) - 2;
-      var x = (_this.monthOffset * i);
-      var y = Math.abs( _this.realHeight - ( (h * j) + 2 ) );
-      _this.renderRect( x, y, w, h, window.d[months[i]][j] );
+      //var x = (_this.monthOffset * i) + 1;
+      var x = ((_this.monthOffset * i) + 1) + _this.rw
+      var y = Math.abs( _this.realHeight - ((_this.rh + 2) * j ) ) + 50;
+      _this.renderRect( x, y, _this.rw, _this.rh, window.d[months[i]][j], 2 );
     }
     j++;
     if( j < window.d[window.months[i]].length ) {
-      var t = setTimeout( function() { _this.drawItem( i, j ) }, 10 );
+      var t = setTimeout( function() { _this.drawRect( i, j ) }, 5 );
     } else {
       j = 0;
       i++;
       if( i < window.months.length ) {
-        _this.drawItem( i, j );
+        _this.drawRect( i, j );
       }
     }
+  }
+
+  this.setWidthAndHeightOfRects = function() {
+    _this.rh = ( _this.realHeight / _this.biggest ) - 2;
+    _this.rw = (_this.monthOffset - 2) / 2;
   }
 
   this.renderRect = function( x, y, w, h, data ) {
@@ -102,30 +167,69 @@ var Viz = function() {
       }).
       animate({
         height: h
-      }, 10, "<>" )
+      }, 5, "linear" )
       .data( 'entity', data['Bank Name'] )
       .data( 'city', data['City'] )
       .data( 'state', data['State'] )
       .data( 'bought_by', data['Acquiring Institution'])
       .data( 'date', data['Closing Date']);
-    //_this.bindRect( rect );
+    _this.bindRect( rect, "rgb(0,0,0)" );
   }
 
-  this.bindRect = function( rect ) {
-    rect.mouseover( function() {
-      console.log( this.data( 'entity' ) );
-      console.log( this.data( 'city' ) + ', ' + this.data( 'state') );
-      console.log( this.data( 'bought_by') );
-      console.log( this.data( 'date' ) );
-      console.log( new Date( Date.parse( this.data( 'date' ) ) ) );
+  this.bindRect = function( rect, color ) {
+    var w = rect.getBBox().width;
+    var x = rect.getBBox.x;
+    var onRectMouseover = function() {
+      this.unmouseover( onRectMouseover );
+      var x = this.getBBox().x;
+      var w = this.getBBox().width;
+      this.animate({ 
+        width: 0,
+        x: x + ( w / 2 )
+      }, 250, "<>", function() {
+        this.animate({
+          "fill": color
+        }, 0, "linear", function() {
+          this.animate({
+            width: w,
+            x: x
+          }, 250, "<>", function() {
+            this.mouseover( onRectMouseover );
+          } );
+        });
+      });
+    }
+    rect.mouseover( onRectMouseover );
+    /*
+    rect.mouseout( function() {
+      var w = this.getBBox().width;
+      var x = this.getBBox().x;
+      this.animate({
+        width: 0,
+        cx: x + ( w / 2 )
+      }, 250, "<>", function() {
+        this.animate({
+          "fill": "rgb(0,0,0)"
+        }, 0, "linear", function() {
+          this.animate({
+            width: w,
+            x: x
+          }, 250, "<>" );
+        });
+      });
     });
+    */
   }
 
   this.init = function() {
     _this.prep();
+    _this.setWidthAndHeightOfRects();
     //for( var i = 0; i < window.months.length; i++ ) {
-      _this.drawItem( 0, 0 );      
+        
     //}
+    //_this.drawSNAPRect( 0 );
+    //_this.drawRect( 0, 0 ); 
+    _this.drawUnemploymentRect( 0 ); 
   }
 
 }
@@ -139,7 +243,7 @@ $(document).ready( function() {
 
 <div class="ad">
   <div class="svg-wrapper">
-    <h1 class="title">Bank Failures by Month</h1>
+    <h1 class="title">Bank Failures by Month<br>Unemployment Rate by Month</h1>
   </div>
 </div>
 
